--- a/Math Library/Math Library.vcxproj.filters
+++ b/Math Library/Math Library.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="Math.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MathLibrary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Math.h">
